--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -7,7 +7,7 @@
     padding-bottom:10%;
 }
 
-#signup-notification{
+#signup-notification, #signin-notification{
     margin-right: 20px;
     margin-left: 20px;
 }
