--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -122,3 +122,31 @@
     background-color: #D64933;
     box-shadow: 2px 2px 10px rgb(87, 87, 87);
 }
+
+#create-resume{
+    padding: 50px;
+    /* box-shadow: -4px 10px 8px rgb(87, 87, 87); */
+    margin-top: 50px;
+    background-color: #2B303A;
+    color: #fff;
+    font-weight: bold;
+}
+
+#create-resume input{
+    border-radius: 0px;
+    background-color: transparent;
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+}
+
+#create-resume textarea{
+    border-radius: 0px;
+    background-color: transparent;
+}
+
+@media (max-width: 600px){
+    #create-resume{
+        width: 100%;
+    }
+}
