--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -123,7 +123,7 @@
     box-shadow: 2px 2px 10px rgb(87, 87, 87);
 }
 
-#create-resume{
+#create-profile, #create-education{
     padding: 50px;
     /* box-shadow: -4px 10px 8px rgb(87, 87, 87); */
     margin-top: 50px;
@@ -132,7 +132,7 @@
     font-weight: bold;
 }
 
-#create-resume input{
+#create-profile input, #create-education input{
     border-radius: 0px;
     background-color: transparent;
     border-top: 0px;
@@ -140,13 +140,13 @@
     border-right: 0px;
 }
 
-#create-resume textarea{
+#create-profile textarea, #create-education textarea{
     border-radius: 0px;
     background-color: transparent;
 }
 
 @media (max-width: 600px){
-    #create-resume{
+    #create-profile{
         width: 100%;
     }
 }
