--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -123,7 +123,7 @@
     box-shadow: 2px 2px 10px rgb(87, 87, 87);
 }
 
-#create-profile, #create-education{
+#create-profile, #create-education, #image-upload-form, #video-upload-form, #document-upload-form{
     padding: 50px;
     /* box-shadow: -4px 10px 8px rgb(87, 87, 87); */
     margin-top: 50px;
