--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -150,3 +150,21 @@
         width: 100%;
     }
 }
+
+.page{
+    width: 21cm;
+    min-height: 29.7cm;
+    padding: 1cm;
+    margin: 1cm auto;
+    border: 1px #D3D3D3 solid;
+    border-radius: 5px;
+    background: white;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    background-size: cover;
+    background-position: center center;
+}
+
+@page {
+    size: A4;
+    margin: 0;
+}
