--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -123,7 +123,7 @@
     box-shadow: 2px 2px 10px rgb(87, 87, 87);
 }
 
-#create-profile, #create-education, #image-upload-form, #video-upload-form, #document-upload-form{
+#create-profile, #create-institution, #image-upload-form, #video-upload-form, #document-upload-form{
     padding: 50px;
     /* box-shadow: -4px 10px 8px rgb(87, 87, 87); */
     margin-top: 50px;
@@ -132,7 +132,7 @@
     font-weight: bold;
 }
 
-#create-profile input, #create-education input{
+#create-profile input, #create-institution input{
     border-radius: 0px;
     background-color: transparent;
     border-top: 0px;
@@ -140,7 +140,7 @@
     border-right: 0px;
 }
 
-#create-profile textarea, #create-education textarea{
+#create-profile textarea, #create-institution textarea{
     border-radius: 0px;
     background-color: transparent;
 }
