--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -51,7 +51,7 @@
 
 .btn-file{
     background-color: #2B303A;
-    border: none;
+    border: 2px solid #fff;
     display: block;
     margin: auto;
     position: relative;
@@ -94,6 +94,8 @@
 
 .btn-file:hover, .btn-create:hover{
     background: #2B303A;
+    border: 2px solid #fff;
+    box-shadow: 3px 3px 3px #000;
 }
 
 .btn-delete{
@@ -123,7 +125,7 @@
     box-shadow: 2px 2px 10px rgb(87, 87, 87);
 }
 
-#create-profile, #create-institution, #image-upload-form, #video-upload-form, #document-upload-form{
+#create-profile, #create-institution, #create-work, #image-upload-form, #video-upload-form, #document-upload-form{
     padding: 50px;
     /* box-shadow: -4px 10px 8px rgb(87, 87, 87); */
     margin-top: 50px;
@@ -132,17 +134,27 @@
     font-weight: bold;
 }
 
-#create-profile input, #create-institution input{
+#finish-form{
+    padding: 100px;
+    margin-top: 50px;
+    background-color: #2B303A;
+    color: #fff;
+    font-weight: bold;
+}
+
+#create-profile input, #create-institution input, #create-work input{
     border-radius: 0px;
     background-color: transparent;
     border-top: 0px;
     border-left: 0px;
     border-right: 0px;
+    color: #fff;
 }
 
 #create-profile textarea, #create-institution textarea{
     border-radius: 0px;
     background-color: transparent;
+    color: #fff;
 }
 
 @media (max-width: 600px){
