--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -125,7 +125,7 @@ body{
     box-shadow: 2px 2px 10px rgb(87, 87, 87);
 }
 
-#create-profile, #create-institution, #create-work, #image-upload-form, #video-upload-form, #document-upload-form, #create-activities{
+#create-profile, #create-institution, #create-work, #image-upload-form, #video-upload-form, #document-upload-form, #create-activities, #create-award{
     padding: 50px;
     /* box-shadow: -4px 10px 8px rgb(87, 87, 87); */
     margin-top: 50px;
@@ -142,7 +142,7 @@ body{
     font-weight: bold;
 }
 
-#create-profile input, #create-institution input, #create-work input, #create-activities input{
+#create-profile input, #create-institution input, #create-work input, #create-activities input, #create-award input{
     border-radius: 0px;
     background-color: transparent;
     border-top: 0px;
@@ -151,7 +151,7 @@ body{
     color: #fff;
 }
 
-#create-profile textarea, #create-institution textarea, #create-activities textarea{
+#create-profile textarea, #create-institution textarea, #create-activities textarea, #create-award textarea{
     border-radius: 0px;
     background-color: transparent;
     color: #fff;
