--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -139,7 +139,7 @@ body{
     box-shadow: 2px 2px 10px rgb(87, 87, 87);
 }
 
-#create-profile, #create-institution, #create-work, #image-upload-form, #video-upload-form, #document-upload-form, #create-activities, #create-award{
+#create-profile, #create-institution, #create-work, #image-upload-form, #video-upload-form, #document-upload-form, #create-activities, #create-award, #edit-profile, #edit-institution, #edit-work, #edit-activities, #edit-award{
     padding: 50px;
     /* box-shadow: -4px 10px 8px rgb(87, 87, 87); */
     margin-top: 50px;
@@ -156,7 +156,7 @@ body{
     font-weight: bold;
 }
 
-#create-profile input, #create-institution input, #create-work input, #create-activities input, #create-award input{
+#create-profile input, #create-institution input, #create-work input, #create-activities input, #create-award input, #edit-profile input, #edit-institution input, #edit-work input, #edit-activities input, #edit-award input{
     border-radius: 0px;
     background-color: transparent;
     border-top: 0px;
@@ -165,7 +165,7 @@ body{
     color: #fff;
 }
 
-#create-profile textarea, #create-institution textarea, #create-activities textarea, #create-award textarea{
+#create-profile textarea, #create-institution textarea, #create-activities textarea, #create-award textarea, #edit-profile textarea, #edit-activities textarea, #edit-award textarea{
     border-radius: 0px;
     background-color: transparent;
     color: #fff;
