--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -145,7 +145,6 @@ body{
     margin-top: 50px;
     background-color: #2B303A;
     color: #fff;
-    font-weight: bold;
 }
 
 #finish-form{
@@ -162,13 +161,13 @@ body{
     border-top: 0px;
     border-left: 0px;
     border-right: 0px;
-    color: #fff;
+    color: #6c757d;
 }
 
 #create-profile textarea, #create-institution textarea, #create-activities textarea, #create-award textarea, #edit-profile textarea, #edit-activities textarea, #edit-award textarea{
     border-radius: 0px;
     background-color: transparent;
-    color: #fff;
+    color: #6c757d;
 }
 
 @media (max-width: 600px){
